Fixed bug #28377 (debug_backtrace is intermittently passing args)